tests/negative/test_func_arg_name_duplicate.orb
fnc foo (x:i32 y:u32 x:f32) () {};

fnc main () () {};